docs: update Agent Client implementation docs